# datafusion_iceberg

./: .gitignore  Cargo.toml
datafusion_iceberg/: Cargo.toml
datafusion_iceberg/src/: lib.rs  pruning_statistics.rs  statistics.rs  table.rs
datafusion_iceberg_catalog_rest/: Cargo.toml
datafusion_iceberg_catalog_rest/src/: catalog.rs  lib.rs  mirror.rs  schema.rs
