[package]
name = "datafusion_iceberg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
url = "2.3.1"
serde_json = "1.0"
async-trait = "0.1.57"
datafusion = "14.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
object_store = { version = "0.5.0", features = ["aws", "gcp"] }
iceberg-rs = { git = "https://github.com/JanKaul/iceberg-rs" }

[dev-dependencies]
tokio = "1.21"