[package]
name = "datafusion_iceberg_catalog_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "12.0.0"
futures = "0.3.25"
tokio = "1.21"
iceberg-rs = { git = "https://github.com/JanKaul/iceberg-rs", features = ["datafusion-ext"] }

[dev-dependencies]
reqwest = "0.11.12"

iceberg_catalog_rest_client = { git = "https://github.com/JanKaul/iceberg_catalog_rest_client_rust" }